--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <aside class="aside">
         <nav class="nav">
-            <img class="logo" src="demos/app/rsrcs/jsblocks-logo.svg" alt="Ignite UI JS Blocks Logo">
+            <img class="logo" src="demos/app/rsrcs/jsblocks-logo.png" alt="Ignite UI JS Blocks Logo">
             <!--Components-->
             <span class="nav-item header">Components</span>
 
