--- a/demos/app/card/sample.component.html
+++ b/demos/app/card/sample.component.html
@@ -15,8 +15,8 @@
         <!--New York City Card Begins-->
         <article class="card-wrapper">
             <igx-card>
-                <div style="height: 194.5px; overflow: hidden">
-                    <img width="100%" height="auto" [src]="cards[0].imageUrl">
+                <div style="overflow: hidden">
+                    <img width="100%" height="100%" [src]="cards[0].imageUrl">
                 </div>
                 <igx-card-header>
                     <h3 class="igx-card-header__title">{{ cards[0].title }}</h3>
@@ -39,8 +39,8 @@
         <!--Incepient Dawn Card Begins-->
         <article class="card-wrapper">
             <igx-card>
-                <div style="height: 194.5px; overflow: hidden">
-                    <img width="100%" height="auto" [src]="cards[2].imageUrl">
+                <div style="overflow: hidden">
+                    <img width="100%" height="100%" [src]="cards[2].imageUrl">
                 </div>
                 <igx-card-header>
                     <h3 class="igx-card-header__title">{{ cards[2].title }}</h3>
@@ -58,8 +58,8 @@
         <!--Monuments Card Begins-->
         <article class="card-wrapper">
             <igx-card>
-                <div style="height: 346px; overflow: hidden">
-                    <img width="100%" height="auto" [src]="cards[5].imageUrl">
+                <div style="overflow: hidden">
+                    <img width="100%" height="100%" [src]="cards[5].imageUrl">
                 </div>
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--start">
@@ -78,8 +78,8 @@
         <!--Ice Forsest Card Begins-->
         <article class="card-wrapper">
             <igx-card>
-                <div style="height: 194.5px; overflow: hidden">
-                    <img width="100%" height="auto" [src]="cards[1].imageUrl">
+                <div style="overflow: hidden">
+                    <img width="100%" height="100%" [src]="cards[1].imageUrl">
                 </div>
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--end">
@@ -118,8 +118,8 @@
                         <h5 class="igx-card-header__subtitle">{{ cards[6].subtitle }}</h5>
                     </div>
                 </igx-card-header>
-                <div style="height: 194.5px; overflow: hidden">
-                    <img width="100%" height="auto" [src]="cards[6].imageUrl">
+                <div style="overflow: hidden">
+                    <img width="100%" height="100%" [src]="cards[6].imageUrl">
                 </div>
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--start">
