--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -67,7 +67,7 @@
             (keyup.enter)="saveData()"
             (keyup.escape)="cancelEdit()"
             rightButtonLabel="Save"
-            rightButtonBackgroundColor="green"
+            rightButtonBackgroundColor="#00BFB2"
             rightButtonColor="white"
             closeOnOutsideSelect="true"
         >
