--- a/demos/app/input/sample.component.css
+++ b/demos/app/input/sample.component.css
@@ -1,7 +1,18 @@
-.wrapper {
-    margin: 24px;
+.sample-content {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .input-sample {
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+    padding: 24px 16px;
     margin-bottom: 48px;
+}
+
+.form-title {
+    margin: 0;
+    margin-bottom: 48px;
+}
+
+.igx-form-group + .igx-form-group {
+    margin-top: 32px;
 }
