--- a/src/themes/material/modules/_controls.scss
+++ b/src/themes/material/modules/_controls.scss
@@ -2,7 +2,7 @@
     // Save the reference to this block element
     // in a variable for scoped access
     $block: &;
-    
+    padding: 8px 0;
     // Radio control styles
     @include e(radio) {
         //hide default radio control
