(UPDATE) List demo styles (UPDATE) Avatar demo styles (UDPATE) Forms demo styles

--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -43,15 +43,15 @@
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-s.png" roundShape="true"></igx-avatar>
+                    <igx-avatar src="../demos/app/avatar/images/4.jpg" roundShape="true"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-m.png" roundShape="true" size="medium"></igx-avatar>
+                    <igx-avatar src="../demos/app/avatar/images/17.jpg" roundShape="true" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-l.png" roundShape="true" size="large"></igx-avatar>
+                    <igx-avatar src="../demos/app/avatar/images/21.jpg" roundShape="true" size="large"></igx-avatar>
                 </div>
             </article>
 
@@ -86,15 +86,15 @@
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-s.png"></igx-avatar>
+                    <igx-avatar src="../demos/app/avatar/images/18.jpg"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-m.png" size="medium"></igx-avatar>
+                    <igx-avatar src="../demos/app/avatar/images/16.jpg" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-l.png" size="large"></igx-avatar>
+                    <igx-avatar src="../demos/app/avatar/images/19.jpg" size="large"></igx-avatar>
                 </div>
             </article>
         </section>
@@ -141,19 +141,19 @@
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-s.png" roundShape="true">
+                    <igx-avatar src="../demos/app/avatar/images/22.jpg" roundShape="true">
                         <igx-badge type="error" position="top-left" value="212"></igx-badge>
                     </igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-m.png" size="medium">
+                    <igx-avatar src="../demos/app/avatar/images/14.jpg" size="medium">
                         <igx-badge type="warning" position="top-right" icon="perm_identity"></igx-badge>
                     </igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar src="../demos/app/avatar/images/avatar-c-l.png" roundShape="true" size="large">
+                    <igx-avatar src="../demos/app/avatar/images/8.jpg" roundShape="true" size="large">
                         <igx-badge type="success" position="bottom-left" icon="chat_bubble"></igx-badge>
                     </igx-avatar>
                 </div>
