--- a/demos/app/input/sample.component.css
+++ b/demos/app/input/sample.component.css
@@ -16,3 +16,21 @@
 .igx-form-group + .igx-form-group {
     margin-top: 32px;
 }
+
+.switch-sample {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 48px;
+}
+
+.switch-sample + .switch-sample {
+    margin-top: 16px;
+}
+
+.switch-sample > [igxLabel] {
+    position: absolute;
+    margin-left: 56px;
+}
