--- a/demos/app/list/sample.component.html
+++ b/demos/app/list/sample.component.html
@@ -1,118 +1,146 @@
-<div class="wrapper" style="position: relative">
-   
-   <h4>List with no items</h4>
-    <div class="igx-form-group" [hidden]="fruits.length === 0">
-        <input #searchFruits class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="fruitsSearch" />
-        <label igxLabel>
-            <i class="material-icons">search</i>
-        </label>
-        <span class="igx-form-group__clear--hidden">
-            <i class="material-icons">clear</i>
-        </span>
+<div class="sample-wrapper">
+    <div class="sample-header">
+        <h1 class="title">List</h1>
+        <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
+            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
+            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
+            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
+            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
+            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
+            urna sed feugiat.
+        </p>
     </div>
-    <igx-list [hidden]="fruitsFilteredItemsCount === 0"
-        emptyListMessage="No fruits."
-        emptyListImage="../../demos/app/list/images/empty.png"
-        (emptyListButtonClick)="addFruitDialog.open()"
-        [igxFilter]="fruitsFilterOptions" (filtered)="fruitsFiltered($event)">
-        <igx-list-item *ngFor="let fruit of fruits">
-            <div [attr.data-fruit-id]="fruit.id">
-                <span>{{ fruit.name }}</span>
-                <button style="float:right;min-width: 2.5em;" 
-                igxButton="raised" igxRipple="white"
-                (click)="deleteFruit(fruit.id)">X</button>
+    <section class="sample-content">
+        <article>
+            <h4 class="sample-title">Declarative filtered list</h4>
+            <igx-switch [checked]="true" #checkbox>Filter</igx-switch>
+            <div class="igx-form-group">
+                <input class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="search2" />
+                <label igxLabel>
+                    <i class="material-icons">search</i>
+                </label>
+                <span class="igx-form-group__clear--hidden">
+                    <i class="material-icons">clear</i>
+                </span>
             </div>
-        </igx-list-item>
-    </igx-list>
+            <div class="list-sample">
+                <igx-list #declarativeList [igxFilter]="fo2" (filtering)="filteringHandler($event)" (filtered)="filteredHandler($event)">
+                    <igx-list-item [isHeader]="true">Mildly Sweet</igx-list-item>
+                    <igx-list-item [options]="{}">Red Delicious</igx-list-item>
+                    <igx-list-item>Ambrosia</igx-list-item>
+                    <igx-list-item>Rome</igx-list-item>
+                    <igx-list-item [isHeader]="true">Sweet</igx-list-item>
+                    <igx-list-item>Golden Delicious</igx-list-item>
+                    <igx-list-item>Cosmic Crisp</igx-list-item>
+                    <igx-list-item>Pinova</igx-list-item>
+                </igx-list>
+            </div>
+        </article>
 
+        <article>
+            <h4 class="sample-title">Data source filtered list</h4>
+            <div class="igx-form-group">
+                <input class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="search1" />
+                <label igxLabel>
+                    <i class="material-icons">search</i>
+                </label>
+                <span class="igx-form-group__clear--hidden">
+                    <i class="material-icons">clear</i>
+                </span>
+            </div>
+            <div class="list-sample">
+                <igx-list>
+                    <igx-list-item [isHeader]="true">Contacts</igx-list-item>
+                    <igx-list-item igxRipple="pink" igxRippleTarget=".ig-list__item" *ngFor="let item of navItems | igxFilter: fo1">
+                        <div class="item">
+                            <igx-avatar [src]="item.avatar" roundShape="true"></igx-avatar>
+                            <span igxLabel>{{item.text}}</span>
+                            <igx-icon name="star" [class.favorite]="item.favorite"></igx-icon>
+                        </div>
+                    </igx-list-item>
+                </igx-list>
+            </div>
+        </article>
 
-    <div [hidden]="fruitsFilteredItemsCount > 0 || searchFruits.value === ''">
-        No filtered items.
-    </div>
+        <article>
+            <h4 class="sample-title">Non-header List with options</h4>
+            <div class="list-sample">
+                <igx-list [allowRightPanning]="true" [allowLeftPanning]="true" (onLeftPan)="onLeftPan($event)" (onRightPan)="onRightPan($event)"
+                    (onPanStateChange)="onPanStateChange($event)">
+                    <igx-list-item [isHeader]="true">Contacts</igx-list-item>
+                    <igx-list-item *ngFor="let navItem of navItems; let index = index" [options]="options">
+                        <div class="item">
+                            <igx-avatar [src]="navItem.avatar" roundShape="true"></igx-avatar>
+                            <div class="person">
+                                <p class="name">{{navItem.text}}</p>
+                                <span class="phone">{{navItem.phone}}</span>
+                            </div>
+                            <igx-icon name="chevron_right"></igx-icon>
+                        </div>
+                    </igx-list-item>
+                </igx-list>
+            </div>
+        </article>
 
-    <igx-dialog #addFruitDialog title="Add Fruit"
-        leftButtonLabel="Cancel"
-        (onLeftButtonSelect)="addFruitDialog.close()"
-        rightButtonLabel="Add"
-        rightButtonBackgroundColor="#0375be"
-        rightButtonColor="white"
-        (onRightButtonSelect)="onAddFruitButtonClicked(newFruitName.value);newFruitName.value='';"
-        backgroundClick="true"
-        closeOnOutsideSelect="true">
-        <div class="igx-form-group">
-            <input #newFruitName type="text" igxInput />
-            <label igxLabel>Fruit Name</label>
-        </div>
-    </igx-dialog>
+        <article>
+            <h4 class="sample-title">Empty list <i class="light">w/ Default template</i></h4>
+            <div class="igx-form-group" [hidden]="fruits.length === 0">
+                <input #searchFruits class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="fruitsSearch" />
+                <label igxLabel>
+                    <i class="material-icons">search</i>
+                </label>
+                <span class="igx-form-group__clear--hidden">
+                    <i class="material-icons">clear</i>
+                </span>
+            </div>
+            <div class="list-sample">
+                <igx-list [hidden]="fruitsFilteredItemsCount === 0" emptyListMessage="No fruits." emptyListImage="../../demos/app/list/images/empty.png"
+                    (emptyListButtonClick)="addFruitDialog.open()" [igxFilter]="fruitsFilterOptions" (filtered)="fruitsFiltered($event)">
+                    <igx-list-item *ngFor="let fruit of fruits">
+                        <div class="item" [attr.data-fruit-id]="fruit.id">
+                            <span>{{ fruit.name }}</span>
+                            <igx-icon class="delete-item" name="close" (click)="deleteFruit(fruit.id)">X</igx-icon>
+                        </div>
+                    </igx-list-item>
+                </igx-list>
+                <div class="igx-list__empty--custom" [hidden]="fruitsFilteredItemsCount > 0 || searchFruits.value === ''">
+                    No filtered items.
+                </div>
+                <button
+                    igxButton="fab" 
+                    igxButtonColor="white" 
+                    igxButtonBackground="#0375be" 
+                    igRipple="white"
+                    (click)="addFruitDialog.open()"
+                    [hidden]="fruits.length === 0"
+                    style="position: absolute; bottom: 24px; right: 24px">
+                        <i class="material-icons">add</i>
+                </button>
+            </div>
+        </article>
 
-    <button igxButton="fab" igxButtonColor="white" 
-        igxButtonBackground="#0375be" igRipple="white" (click)="addFruitDialog.open()"
-        style="position:absolute; bottom: 10px; right: 10px">
-        <i class="material-icons">add</i>
-    </button>
+        <article>
+            <h4 class="sample-title">Empty list <i class="light">w/ Custom template</i></h4>
+            <div class="list-sample">
+                <igx-list hasNoItemsTemplate="true">
+                    <igx-list-item *ngFor="let fruit of fruits">
+                        {{ fruit.name }}
+                    </igx-list-item>
+                    <div class="igx-list__empty--custom">
+                        No items, bruh.
+                    </div>
+                </igx-list>
+            </div>
+        </article>
+    </section>
 </div>
-<div class="wrapper">
-    <h4>Declarative Fitered List</h4>
-    <igx-checkbox [checked]="true" #checkbox>Perform filtering</igx-checkbox>
+
+<igx-dialog #addFruitDialog title="Add Fruit" leftButtonLabel="Cancel" (onLeftButtonSelect)="addFruitDialog.close()" rightButtonLabel="Add"
+    rightButtonBackgroundColor="#0375be" rightButtonColor="white" (onRightButtonSelect)="onAddFruitButtonClicked(newFruitName.value);newFruitName.value='';"
+    backgroundClick="true" closeOnOutsideSelect="true">
     <div class="igx-form-group">
-        <input class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="search2" />
-        <label igxLabel>
-            <i class="material-icons">search</i>
-        </label>
-        <span class="igx-form-group__clear--hidden">
-            <i class="material-icons">clear</i>
-        </span>
+        <input #newFruitName type="text" igxInput />
+        <label igxLabel>Fruit Name</label>
     </div>
-    <igx-list #declarativeList [igxFilter]="fo2" (filtering)="filteringHandler($event)" (filtered)="filteredHandler($event)">
-        <igx-list-item [isHeader]="true">Mildly Sweet</igx-list-item>
-        <igx-list-item [options]="{}">Red Delicious</igx-list-item>
-        <igx-list-item>Ambrosia</igx-list-item>
-        <igx-list-item>Rome</igx-list-item>
-        <igx-list-item [isHeader]="true">Sweet</igx-list-item>
-        <igx-list-item>Golden Delicious</igx-list-item>
-        <igx-list-item>Cosmic Crisp</igx-list-item>
-        <igx-list-item>Pinova</igx-list-item>
-    </igx-list>
-</div>
-<div class="wrapper">
-    <h4>Non-header List with options</h4>
-    <igx-list [allowRightPanning]="true" [allowLeftPanning]="true" 
-        (onLeftPan)="onLeftPan($event)" (onRightPan)="onRightPan($event)" (onPanStateChange)="onPanStateChange($event)">
-    <igx-list-item *ngFor="let navItem of navItems; let index = index" [options]="options">
-        <div>
-            {{navItem.text}}
-        </div>
-    </igx-list-item>
-    </igx-list>
-</div>
-
-<div class="wrapper">
-    <h4>Data Source Filtered List</h4>
-    <div class="igx-form-group">
-        <input class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="search1" />
-        <label igxLabel>
-            <i class="material-icons">search</i>
-        </label>
-        <span class="igx-form-group__clear--hidden">
-            <i class="material-icons">clear</i>
-        </span>
-    </div>
-    <igx-list>
-        <igx-list-item igxRipple="pink" igxRippleTarget=".ig-list__item"
-            *ngFor="let item of navItems | igxFilter: fo1">
-            {{item.text}}
-        </igx-list-item>
-    </igx-list>
-</div>
-
-<div class="wrapper">
-    <h4>List with custom no items template</h4>
-    <igx-list hasNoItemsTemplate="true">
-        <igx-list-item *ngFor="let fruit of fruits">
-            {{ fruit.name }}
-        </igx-list-item>
-        <div class="igx-list__empty--custom">
-            No items, bruh.
-        </div>
-    </igx-list>
-</div>
+</igx-dialog>
