--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -459,8 +459,8 @@ $list-item-height: em(48px) !default;
 $list-item-line-height: em(48px) !default;
 $list-item-font-size: em(16px) !default;
 $list-item-padding: 8px 16px;
-$list-item-active-background: darken(#fff, 1%);
-$list-item-active-shadow: 4px 0px 6px -3px rgba(167, 167, 167, 0.3);
+$list-item-active-background: darken(#fff, 5%);
+$list-item-active-shadow: $elevate-2;
 $list-item-tl-sl-font-size: em(14px) !default;
 $list-item-tl-height: em(72px) !default;
 $list-item-tl-sl-color: #757575 !default;
