--- a/src/themes/material/modules/_controls.scss
+++ b/src/themes/material/modules/_controls.scss
@@ -2,6 +2,9 @@
     // Save the reference to this block element
     // in a variable for scoped access
     $block: &;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 8px 0;
     // Radio control styles
     @include e(radio) {
